# document-to-podcast

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: package.yaml  sync_hf_space.yaml  tests.yaml
demo/: app.py  notebook.ipynb
docs/: api.md  customization.md  future-features-contributions.md  getting-started.md  index.md  step-by-step-guide.md
document-to-podcast/: README.md  workflow.py
document-to-podcast/tasks/: downloader.py  performer.py  scriptwriter.py  transformer.py
example_data/: config.yaml
src/document_to_podcast/: cli.py  config.py  generate_audio.py  generate_script.py  load_data.py  models.py  utils.py  validators.py
src/document_to_podcast/inference/: model_loaders.py  text_to_speech.py  text_to_text.py
src/document_to_podcast/preprocessing/: __init__.py  data_cleaners.py  data_loaders.py  model_loaders.py
tests/e2e/: test_document_to_podcast.py
tests/unit/inference/: test_model_loaders.py  test_text_to_speech.py
